crates/ruff_python_parser/tests/snapshots/invalid_syntax@try_stmt_missing_except_finally.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/try_stmt_missing_except_finally.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..43,
        body: [
            Try(
                StmtTry {
                    node_index: NodeIndex(None),
                    range: 0..13,
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 9..13,
                            },
                        ),
                    ],
                    handlers: [],
                    orelse: [],
                    finalbody: [],
                    is_star: false,
                    runtime_body: None,
                    runtime_handlers: None,
                    runtime_orelse: None,
                    runtime_finalbody: None,
                },
            ),
            Try(
                StmtTry {
                    node_index: NodeIndex(None),
                    range: 14..42,
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 23..27,
                            },
                        ),
                    ],
                    handlers: [],
                    orelse: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 38..42,
                            },
                        ),
                    ],
                    finalbody: [],
                    is_star: false,
                    runtime_body: None,
                    runtime_handlers: None,
                    runtime_orelse: None,
                    runtime_finalbody: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | try:
2 |     pass
3 | try:
  | ^^^ Syntax Error: Expected `except` or `finally` after `try` block
4 |     pass
5 | else:
  |


  |
5 | else:
6 |     pass
  |         ^ Syntax Error: Expected `except` or `finally` after `try` block
