crates/ruff_python_parser/tests/snapshots/invalid_syntax@try_stmt_misspelled_except.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/try_stmt_misspelled_except.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..165,
        body: [
            Try(
                StmtTry {
                    node_index: NodeIndex(None),
                    range: 0..13,
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 9..13,
                            },
                        ),
                    ],
                    handlers: [],
                    orelse: [],
                    finalbody: [],
                    is_star: false,
                    runtime_body: None,
                    runtime_handlers: None,
                    runtime_orelse: None,
                    runtime_finalbody: None,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    node_index: NodeIndex(None),
                    range: 14..20,
                    target: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 14..19,
                            id: Name("exept"),
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 20..20,
                            id: Name(""),
                            ctx: Invalid,
                        },
                    ),
                    value: None,
                    simple: true,
                    runtime_simple: None,
                },
            ),
            Pass(
                StmtPass {
                    node_index: NodeIndex(None),
                    range: 54..58,
                },
            ),
            Pass(
                StmtPass {
                    node_index: NodeIndex(None),
                    range: 72..76,
                },
            ),
            Assign(
                StmtAssign {
                    node_index: NodeIndex(None),
                    range: 77..82,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 77..78,
                                id: Name("a"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: NodeIndex(None),
                            range: 81..82,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                    runtime_targets: None,
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                },
            ),
            Try(
                StmtTry {
                    node_index: NodeIndex(None),
                    range: 83..113,
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 92..96,
                            },
                        ),
                    ],
                    handlers: [
                        ExceptHandler(
                            ExceptHandlerExceptHandler {
                                range: 97..113,
                                node_index: NodeIndex(None),
                                type_: None,
                                name: None,
                                body: [
                                    Pass(
                                        StmtPass {
                                            node_index: NodeIndex(None),
                                            range: 109..113,
                                        },
                                    ),
                                ],
                                runtime_body: None,
                            },
                        ),
                    ],
                    orelse: [],
                    finalbody: [],
                    is_star: false,
                    runtime_body: None,
                    runtime_handlers: None,
                    runtime_orelse: None,
                    runtime_finalbody: None,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    node_index: NodeIndex(None),
                    range: 114..120,
                    target: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 114..119,
                            id: Name("exept"),
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 120..120,
                            id: Name(""),
                            ctx: Invalid,
                        },
                    ),
                    value: None,
                    simple: true,
                    runtime_simple: None,
                },
            ),
            Pass(
                StmtPass {
                    node_index: NodeIndex(None),
                    range: 154..158,
                },
            ),
            Assign(
                StmtAssign {
                    node_index: NodeIndex(None),
                    range: 159..164,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 159..160,
                                id: Name("b"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: NodeIndex(None),
                            range: 163..164,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                    runtime_targets: None,
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | try:
2 |     pass
3 | exept:  # spellchecker:disable-line
  | ^^^^^ Syntax Error: expected 'except' or 'finally' block
4 |     pass
5 | finally:
  |


  |
1 | try:
2 |     pass
3 | exept:  # spellchecker:disable-line
  |                                    ^ Syntax Error: invalid syntax
4 |     pass
5 | finally:
6 |     pass
  |


  |
2 |     pass
3 | exept:  # spellchecker:disable-line
4 |     pass
  | ^^^^ Syntax Error: unexpected indentation
5 | finally:
6 |     pass
  |


  |
3 | exept:  # spellchecker:disable-line
4 |     pass
5 | finally:
  | ^^^^^^^ Syntax Error: invalid syntax
6 |     pass
7 | a = 1
  |


  |
3 | exept:  # spellchecker:disable-line
4 |     pass
5 | finally:
  |        ^ Syntax Error: invalid syntax
6 |     pass
7 | a = 1
  |


  |
3 | exept:  # spellchecker:disable-line
4 |     pass
5 | finally:
  |         ^ Syntax Error: invalid syntax
6 |     pass
7 | a = 1
8 | try:
  |


  |
4 |     pass
5 | finally:
6 |     pass
  | ^^^^ Syntax Error: unexpected indentation
7 | a = 1
8 | try:
  |


   |
10 | except:
11 |     pass
12 | exept:  # spellchecker:disable-line
   |                                    ^ Syntax Error: invalid syntax
13 |     pass
14 | b = 1
   |


   |
11 |     pass
12 | exept:  # spellchecker:disable-line
13 |     pass
   | ^^^^ Syntax Error: unexpected indentation
14 | b = 1
   |
